--- a/src/main/resources/templates/ordre-side.html
+++ b/src/main/resources/templates/ordre-side.html
@@ -55,7 +55,8 @@
                         <div>
                             <form class="taskform" method="post">
                                 <button type="submit" name="order_id" th:value="${order.getId()}"
-                                        formaction="/kontakt">Kontakt os
+                                        formaction="/kontakt">
+                                    Kontakt os
                                 </button>
                             </form>
                         </div>
